--- a/adminPage.html
+++ b/adminPage.html
@@ -34,11 +34,10 @@
                     Total Users: <span id="UserValue" class="nav-data">Load...</span>
                 </div>
                 <div class="nav-item" id="pastClicks">
-                    <label for="pastDate">Select Date:</label>
                     <div style="display: flex; gap:24px">
-                        <input type="date" id="pastDate" style="height: 50px; width:120px; border-radius: 23px;">
+                        <input type="date" id="pastDate" style="height: 30px; width:140px; border-radius: 23px; font-size: 25px;">
                         <button onclick="fetchClicksByDate()"
-                            style="height: 50px; width:120px; border-radius: 23px;">Search</button>
+                            style="height: 30px; width:90px; border-radius: 23px;">Search</button>
                     </div>
                     <div>Past Clicks: <span id="pastClicksValue" class="nav-data"></span></div>
                 </div>
