--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <button class="btn white-btn" id="loginBtn" onclick="login()"><a href="/login.html">Sign In</a></button>
+                <button class="btn white-btn" id="loginBtn" onclick="signIn()"></button>
             </div>
             <div class="nav-menu-btn">
                 <i class="bx bx-menu" id="hamburger" onclick="toggleMenu()">☰</i>
