--- a/Dashboard.html
+++ b/Dashboard.html
@@ -53,6 +53,7 @@
     <script>
         const apiUrl = "https://backend-recent-2.onrender.com";
 
+
         function insertLinkAtBeginning(container, linkBox) {
             if (container.firstChild) {
                 container.insertBefore(linkBox, container.firstChild);
@@ -68,6 +69,7 @@
             const adLink = document.getElementById('ad-link');
             const userId = new URLSearchParams(window.location.search).get('userId');
             const adIndexKey = 'ad-viewed-index';
+            const clickCountKey = 'click-count';
 
             if (!userId) {
                 window.location.href = 'login.html';
@@ -76,25 +78,6 @@
 
             spinnerOverlay.style.display = 'flex';
             document.body.classList.add('spinner-active');
-
-
-
-            try {
-                const adResponse = await fetch(`${apiUrl}/admin/get-ad`);
-                const adData = await adResponse.json();
-
-                if (adData) {
-                    adOverlay.dataset.linkIndex = adData.linkIndex;
-                    adLink.href = adData.adLink;
-                    adImage.src = adData.adImage;
-
-                } else {
-                    console.log('No ad data found');
-                }
-            } catch (error) {
-                console.error('Error fetching ad data:', error);
-            }
-
 
             try {
                 const profileResponse = await fetch(`${apiUrl}/profiles/${userId}`, {
@@ -182,45 +165,64 @@
                     });
 
                     // Ad Handling
+                    let clickCount = parseInt(localStorage.getItem(clickCountKey)) || 0;
+                    clickCount++;
+                    localStorage.setItem(clickCountKey, clickCount);
+
                     const viewedAdIndexes = JSON.parse(localStorage.getItem(adIndexKey)) || {};
-                    const currentAdIndex = parseInt(adOverlay.dataset.linkIndex);
+                    const currentAdIndex = viewedAdIndexes[userId] ? viewedAdIndexes[userId] + 1 : 6;
 
-                    if (!viewedAdIndexes[userId] || viewedAdIndexes[userId] !== currentAdIndex) {
-                        adOverlay.style.display = 'flex';
-                        document.body.classList.add('ad-active');
+                    if (clickCount % 5 === 0) {
+                        try {
+                            const adResponse = await fetch(`${apiUrl}/admin/get-ad?index=${currentAdIndex}`);
+                            const adData = await adResponse.json();
 
-                        adLink.addEventListener('click', (event) => {
-                            event.preventDefault();
+                            if (adData) {
+                                adOverlay.dataset.linkIndex = adData.linkIndex;
+                                adLink.href = adData.adLink;
+                                adImage.src = adData.adImage;
 
-                            const stayTime = 10000;
-                            const startTime = Date.now();
+                                adOverlay.style.display = 'flex';
+                                document.body.classList.add('ad-active');
 
-                            let timeoutId = setTimeout(() => {
-                                viewedAdIndexes[userId] = currentAdIndex;
-                                localStorage.setItem(adIndexKey, JSON.stringify(viewedAdIndexes));
-                                adOverlay.style.display = 'none';
-                                document.body.classList.remove('ad-active');
-                            }, stayTime);
+                                adLink.addEventListener('click', (event) => {
+                                    event.preventDefault();
 
-                            const handleVisibilityChange = () => {
-                                if (document.visibilityState === 'visible') {
-                                    const elapsedTime = Date.now() - startTime;
-                                    clearTimeout(timeoutId);
-                                    if (elapsedTime >= stayTime) {
+                                    const stayTime = 10000;
+                                    const startTime = Date.now();
+
+                                    let timeoutId = setTimeout(() => {
                                         viewedAdIndexes[userId] = currentAdIndex;
                                         localStorage.setItem(adIndexKey, JSON.stringify(viewedAdIndexes));
                                         adOverlay.style.display = 'none';
                                         document.body.classList.remove('ad-active');
-                                    } else {
-                                        alert("You did not stay at least 10 seconds on the ad page. The ad will reappear.");
-                                    }
-                                    document.removeEventListener('visibilitychange', handleVisibilityChange);
-                                }
-                            };
+                                    }, stayTime);
 
-                            document.addEventListener('visibilitychange', handleVisibilityChange);
-                            window.location.href = adLink.href;
-                        });
+                                    const handleVisibilityChange = () => {
+                                        if (document.visibilityState === 'visible') {
+                                            const elapsedTime = Date.now() - startTime;
+                                            clearTimeout(timeoutId);
+                                            if (elapsedTime >= stayTime) {
+                                                viewedAdIndexes[userId] = currentAdIndex;
+                                                localStorage.setItem(adIndexKey, JSON.stringify(viewedAdIndexes));
+                                                adOverlay.style.display = 'none';
+                                                document.body.classList.remove('ad-active');
+                                            } else {
+                                                alert("You did not stay at least 10 seconds on the ad page. The ad will reappear.");
+                                            }
+                                            document.removeEventListener('visibilitychange', handleVisibilityChange);
+                                        }
+                                    };
+
+                                    document.addEventListener('visibilitychange', handleVisibilityChange);
+                                    window.location.href = adLink.href;
+                                });
+                            } else {
+                                console.log('No ad data found');
+                            }
+                        } catch (error) {
+                            console.error('Error fetching ad data:', error);
+                        }
                     } else {
                         adOverlay.style.display = 'none';
                         document.body.classList.remove('ad-active');
