--- a/Dashboard.html
+++ b/Dashboard.html
@@ -179,8 +179,8 @@
 
                             if (adData) {
                                 adOverlay.dataset.linkIndex = adData.linkIndex;
-                                adLink.href = adData.adLink;
-                                adImage.src = adData.adImage;
+                                adLink.href = adData.IdxLnk;
+                                adImage.src = adData.IdxImg;
 
                                 adOverlay.style.display = 'flex';
                                 document.body.classList.add('ad-active');
